--- a/Day 1/style.css
+++ b/Day 1/style.css
@@ -9,37 +9,82 @@
 body{
     font-family: 'Roboto' , sans-serif;
     margin: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
     overflow: hidden;
+    height: 100vh;
 }
 
-.panel:nth-child(1) h2{
+.panel:nth-child(1){
     background-image: url('https://images.unsplash.com/photo-1657841697977-bde4ec801bea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=388&q=80') ;
     
 }
 
 
-.panel:nth-child(2) h2{
+.panel:nth-child(2){
     background-image:url('https://images.unsplash.com/photo-1657724712603-9d4db3e8eaa7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80') ;
-    background-color: green;
 }
 
 
-.panel:nth-child(3) h2{
+.panel:nth-child(3){
     background-image:url('https://images.unsplash.com/photo-1656791637859-fcdc1a99abd8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80');
 }
 
 
-.panel:nth-child(4) h2{
+.panel:nth-child(4){
     background-image:url('https://images.unsplash.com/photo-1657652936041-5765e8ca17f7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80') ;
 }
 
 
-.panel:nth-child(5) h2{
+.panel:nth-child(5){
     background-image:url('https://images.unsplash.com/photo-1657711999361-0a6eea09c0e2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80');
 }
+
+.container{
+    display: flex;
+    justify-content: center;
+    width: 90vw;
+    margin: auto;
+}
+
+.panel{
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    margin: 10px;
+    height: 90vh;
+    color: white;
+    flex: 0.5;
+    border-radius: 50px;
+    position: relative;
+    transition: flex 0.7s ease-in;
+}
+
+.panel h3{
+    font-size: 24px;
+    position: absolute;
+    bottom: 20px;
+    left: 20px; 
+    opacity: 0;
+    margin: 0;
+}
+
+.panel.active{
+    flex: 5;
+}
+
+.panel.active h3{
+    opacity: 1;
+    transition: opacity 0.3s ease-in 0.4s;
+
+}
+
+@media (max-width: 550px){
+    .container{
+        width: 100vw;
+    }
+
+    .panel:nth-child(4), .panel:nth-child(5){
+        display: none;
+    }
+}
+
 
