--- a/Day 3/style.css
+++ b/Day 3/style.css
@@ -37,7 +37,7 @@ body{
     border-radius: 50%;
     height: 200px;
     width: 200px;
-    transition: transform o.5s linear;
+    transition: transform 0.5s linear;
 }
 
 .container.show-nav .circle{
